@@ -1,11 +1,15 @@
 import com.android.build.api.dsl.LibraryExtension
 import dev.shtanko.androidlab.configureKotlinAndroid
+import dev.shtanko.androidlab.configureSpotlessForAndroid
 import dev.shtanko.androidlab.libs
 import org.gradle.api.Plugin
 import org.gradle.api.Project
+import org.gradle.api.tasks.testing.Test
 import org.gradle.kotlin.dsl.apply
 import org.gradle.kotlin.dsl.configure
 import org.gradle.kotlin.dsl.dependencies
+import org.gradle.kotlin.dsl.invoke
+import org.gradle.kotlin.dsl.withType
 
 class AndroidLibraryConventionPlugin : Plugin<Project> {
     override fun apply(target: Project) {
@@ -24,7 +28,32 @@ class AndroidLibraryConventionPlugin : Plugin<Project> {
                 resourcePrefix =
                     path.split("""\W""".toRegex()).drop(1).distinct().joinToString(separator = "_")
                         .lowercase() + "_"
+
+                testOptions {
+                    // Required for Robolectric
+                    unitTests.isIncludeAndroidResources = true
+                    unitTests.isReturnDefaultValues = true
+
+                    unitTests.all {
+                        it.useJUnitPlatform()
+                        it.jvmArgs(
+                            "--add-opens",
+                            "java.base/java.util=ALL-UNNAMED",
+                            "--add-opens",
+                            "java.base/java.lang=ALL-UNNAMED",
+                            "--add-opens",
+                            "java.base/java.time=ALL-UNNAMED",
+                            "-Xshare:off",
+                        )
+                    }
+                }
             }
+            tasks {
+                withType<Test> {
+                    useJUnitPlatform()
+                }
+            }
+            configureSpotlessForAndroid()
             dependencies {
                 "androidTestImplementation"(libs.findLibrary("kotlin.test").get())
                 "androidTestImplementation"(libs.findLibrary("junit5-api").get())
